--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1375,7 +1375,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>debug=0x100 keeysyms=1</string>
+				<string>debug=0x100 keeysyms=1 igfxonln=1</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
