--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -276,7 +276,7 @@
 			<key>SignalAppleOS</key>
 			<false/>
 			<key>SyncRuntimePermissions</key>
-			<false/>
+			<true/>
 		</dict>
 	</dict>
 	<key>DeviceProperties</key>
